@@ -436,6 +436,10 @@ class SmartClientMedium(object):
         self._protocol_version_error = None
         self._protocol_version = None
         self._done_hello = False
+        # Be optimistic: we assume the remote end can accept new remote
+        # requests until we get an error saying otherwise.  (1.2 adds some
+        # requests that send bodies, which confuses older servers.)
+        self._remote_is_at_least_1_2 = True
 
     def protocol_version(self):
         """Find out if 'hello' smart request works."""
@@ -491,10 +495,6 @@ class SmartClientStreamMedium(SmartClientMedium):
     def __init__(self):
         SmartClientMedium.__init__(self)
         self._current_request = None
-        # Be optimistic: we assume the remote end can accept new remote
-        # requests until we get an error saying otherwise.  (1.2 adds some
-        # requests that send bodies, which confuses older servers.)
-        self._remote_is_at_least_1_2 = True
 
     def accept_bytes(self, bytes):
         self._accept_bytes(bytes)
